k8s-manifests/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dr-eureka
  namespace: dr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eureka-service
  template:
    metadata:
      labels:
        app: eureka-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: eureka-service
          image: pdock855/eureka:placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
