k8s-manifests/eureka-kservice.yaml
apiVersion: v1
kind: Service
metadata:
   name: eureka-service
   namespace: dr
spec:
   selector:
       app: eureka-service
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8761
   type: ClusterIP
