k8s-manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dr-frontend-ingress
  namespace: dr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: dr-frontend-tls
  rules:
    - http:
        paths:
         - path: /
           pathType: prefix
           backend:
             service:
               name: dr-frontend-service
               port:
                 number: 80
